--- a/Desktop/Project-2/Doodle-1/app/src/main/AndroidManifest.xml
+++ b/Desktop/Project-2/Doodle-1/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         </activity>
         <activity android:name=".ShopActivity">
         </activity>
+        <activity android:name=".DetailActivity">
+        </activity>
     </application>
 
 </manifest>
