Almost all requirements working

--- a/Desktop/Project-2/Doodle-1/app/src/main/AndroidManifest.xml
+++ b/Desktop/Project-2/Doodle-1/app/src/main/AndroidManifest.xml
@@ -15,16 +15,20 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ShopActivity"
+        <activity
+            android:name=".ShopActivity"
             android:launchMode="singleTop">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
+                <action android:name="android.intent.action.SEARCH"/>
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable"/>
         </activity>
         <activity android:name=".DetailActivity">
+        </activity>
+        <activity android:name=".CartActivity">
         </activity>
     </application>
 
