--- a/Desktop/Project-2/Doodle-1/app/build.gradle
+++ b/Desktop/Project-2/Doodle-1/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.0.0'
+    compile 'com.android.support:design:25.0.0'
 }
