--- a/Desktop/Project-2/Doodle-1/app/src/main/AndroidManifest.xml
+++ b/Desktop/Project-2/Doodle-1/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         </activity>
         <activity android:name=".CartActivity">
         </activity>
+        <activity android:name=".EquipActivity">
+        </activity>
     </application>
 
 </manifest>
